2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	Support for Intel icc on Linux/i386.
	* autoconf/aclocal.m4 (CL_STRLEN): When checking for the return type,
	prefer size_t over int. Avoids icc warning.
	* lispbibl.d (INTEL): New macro.
	(NULL): Don't define if INTEL. Avoids icc warning.
	(ASM_get_SP_register, SP, setSP): Use same asm based statement
	expression when using Intel icc as when using gcc.
	* genclisph.d (main): Likewise.
	* arilev0.d (mulu16) [I80386]: Likewise.
	(mulu32) [I80386]: Likewise.
	(divu_3216_1616) [I80386]: Likewise.
	(divu_6432_3232) [I80386]: Likewise.
	* eval.d (LD, LR, U_operand, S_operand): Likewise.
	* int2adic.d (D_D_mal2adic_D): Likewise.
	* intlog.d (integerlength16, integerlength32, ord2_32): Likewise.
	* ari80386.d (mulu32_): Don't define when using Intel icc.
	(divu_6432_3232_): Likewise.

2001-11-14  Sam Steingold  <sds@gnu.org>

	* stream.d (init_streamvars): when stdin (resp. stdout) is not a
	terminal, set *STANDARD-INPUT* (resp. *STANDARD-OUTPUT*) to the
	actual stream, not *TERMINAL-IO* synonym stream

2001-11-14  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: envelop all "{}" macros in "do{}while(0)"

2001-11-09  Sam Steingold  <sds@gnu.org>

	* pathname.d (CD): append a slash when the string does not end
	with it (compatibility with CMUCL &al); the original behavior is
	still available as (cd (pathname string))

2001-11-08  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (load-lpt-many): evaluate the definition for
	AllegroCL compatibility

2001-11-07  Sam Steingold  <sds@gnu.org>

	Support CMUCL- and AllegroCL-style logical host loading
	* defs1.lisp (load-lpt-many): new function (AllegroCL-style)
	(load-lpt-one): new function (CMUCL-style)
	(*load-logical-pathname-translations-database*): new user variable
	(load-logical-pathname-translations): use them

2001-11-07  Sam Steingold  <sds@gnu.org>

	* init.lisp (search-file): handle the extension-less situations

2001-11-05  Sam Steingold  <sds@gnu.org>
